<resources>
    <string name="app_name">Basic Statistics</string>
    <string name="banner_ad_id" translatable="false">ca-app-pub-2838402743054690/2181824400</string>
    <string name="test_device_id" translatable="false">3B317ED93FEC6B5C4E4469A5DA37932F</string>
    <string name="more_apps">More Apps by this Developer</string>
    <string name="developer_url" translatable="false">https://play.google.com/store/apps/developer?id=Marcos+I.+Miranda+G.</string>
    <string name="list">List</string>
    <string name="add_to_list">Type data to add to the list\nPress Enter on the keyboard to add</string>
    <string name="list_error_empty_input">Please, write something on the text input</string>
    <string name="list_error_empty_list">The list cannot be empty</string>
    <string name="list_error_empty_lists">The lists cannot both be empty</string>
    <string name="list_error_not_match">The lists must have the same number of variables</string>
    <string name="list_error_not_match_unique">The lists must have the same number of unique variables</string>
    <string name="list_error_2_unique">The lists must have at least 2 unique variables</string>
    <string name="add">Add</string>
    <string name="calc">Calculate</string>
    <string name="view">View</string>
    <string name="clear">Clear</string>
    <string name="generate">Generate</string>
    <string name="generate_save">Generate and Save</string>
    <string name="repeat">Repeat</string>
    <string name="var_x">Variable X</string>
    <string name="var_x_qualitative">Variable X (Qualitative)</string>
    <string name="var_y">Variable Y</string>
    <string name="var_y_quantitative">Variable Y (Quantitative)</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_last">Delete last</string>
    <string name="invalid_values">Invalid values</string>
    <string name="req_n_30">"n must be greater than 30 "</string>
    <string name="req_n1_n2_30">n1 and n2 must be greater than 30</string>
    <string name="req_n_p_5">(n * p) and (n * (1 - p)) must be greater than 5</string>
    <string name="req_n1_p1_5">(n1 * p1) and (n1 * (1 - p1)) must be greater than 5</string>
    <string name="req_n2_p2_5">(n2 * p2) and (n2 * (1 - p2)) must be greater than 5</string>
    <string name="req_n_pi_5">(n * π) and (n * (1 - π)) must be greater than 5</string>
    <string name="copy">Copy</string>
    <string name="copied">¡Copied!</string>
    <string name="minimal_sample_size">The minimal sample size with the previous parameters is:</string>
    <string name="degrees_freedom">Degrees of freedom</string>
    <string name="degrees_freedom_numerator">Degrees of freedom of numerator</string>
    <string name="degrees_freedom_denominator">Degrees of freedom of denominator</string>
    <string name="mean">Mean</string>
    <string name="median">Median</string>
    <string name="mode">Mode</string>
    <string name="quartile_1">1st Quartile</string>
    <string name="quartile_2">2nd Quartile</string>
    <string name="quartile_3">3rd Quartile</string>
    <string name="amplitude">Amplitude</string>
    <string name="mean_deviation">Mean Deviation</string>
    <string name="standard_deviation">Standard Deviation</string>
    <string name="e_val" translatable="false">2.71828</string>
    <string name="Z_val" translatable="false">1.96</string>
    <string name="Zalpha_val" translatable="false">1.96</string>
    <string name="Zbeta_val" translatable="false">0.84</string>
    <string name="a" translatable="false">a</string>
    <string name="b" translatable="false">b</string>
    <string name="C" translatable="false">C</string>
    <string name="d1" translatable="false">d₁</string>
    <string name="d2" translatable="false">d₂</string>
    <string name="E" translatable="false">E</string>
    <string name="e" translatable="false">e</string>
    <string name="F" translatable="false">F</string>
    <string name="Fn" translatable="false">Fₙ</string>
    <string name="M" translatable="false">M</string>
    <string name="m" translatable="false">m</string>
    <string name="N" translatable="false">N</string>
    <string name="n" translatable="false">n</string>
    <string name="ni" translatable="false">n</string>
    <string name="n1" translatable="false">n₁</string>
    <string name="n2" translatable="false">n₂</string>
    <string name="Nn" translatable="false">Nₙ</string>
    <string name="P" translatable="false">P</string>
    <string name="p" translatable="false">p</string>
    <string name="pc" translatable="false">pc</string>
    <string name="P1" translatable="false">P₁</string>
    <string name="P2" translatable="false">P₂</string>
    <string name="p1" translatable="false">p₁</string>
    <string name="p2" translatable="false">p₂</string>
    <string name="R" translatable="false">R</string>
    <string name="r" translatable="false">r</string>
    <string name="S" translatable="false">S</string>
    <string name="s" translatable="false">s</string>
    <string name="S1" translatable="false">S₁</string>
    <string name="S2" translatable="false">S₂</string>
    <string name="s1" translatable="false">s₁</string>
    <string name="s2" translatable="false">s₂</string>
    <string name="u" translatable="false">u</string>
    <string name="u1" translatable="false">u₁</string>
    <string name="u2" translatable="false">u₂</string>
    <string name="v" translatable="false">v</string>
    <string name="x" translatable="false">x</string>
    <string name="xbar" translatable="false">x̄</string>
    <string name="xbar1" translatable="false">x̄₁</string>
    <string name="xbar2" translatable="false">x̄₂</string>
    <string name="y_aps" translatable="false">y\'</string>
    <string name="Z" translatable="false">Z</string>
    <string name="Zalpha" translatable="false">Zα</string>
    <string name="Zbeta" translatable="false">Zβ</string>
    <string name="IC" translatable="false">IC</string>
    <string name="delta" translatable="false">Δ</string>
    <string name="pi" translatable="false">π</string>
    <string name="pi0" translatable="false">π₀</string>
    <string name="pi1" translatable="false">π₁</string>
    <string name="pi2" translatable="false">π₂</string>
    <string name="lambda" translatable="false">λ</string>
    <string name="mi" translatable="false">μ</string>
    <string name="mu0" translatable="false">ϻ₀</string>
    <string name="sigma" translatable="false">σ</string>
    <string name="P_A" translatable="false">P(A)</string>
    <string name="P_B" translatable="false">P(B)</string>
    <string name="RFA" translatable="false">#RFA</string>
    <string name="TRE" translatable="false">#TRE</string>
    <string name="TRO" translatable="false">#TRO</string>
    <string name="P_Ac" translatable="false">P(Ac)</string>
    <string name="P_A_and_B">P(A and B)</string>
    <string name="P_A_or_B">P(A or B)</string>
    <string name="P_A_over_B" translatable="false">P(A / B)</string>
    <string name="P_B_over_A" translatable="false">P(B / A)</string>
    <string name="P_X_equals_x" translatable="false">P(X = x)</string>
    <string name="C_times_F" translatable="false">C * F</string>
    <string name="a_equals" translatable="false">a =</string>
    <string name="b_equals" translatable="false">b =</string>
    <string name="C_equals" translatable="false">C =</string>
    <string name="d1_equals" translatable="false">d₁ =</string>
    <string name="d2_equals" translatable="false">d₂ =</string>
    <string name="E_equals" translatable="false">E =</string>
    <string name="e_equals" translatable="false">e =</string>
    <string name="F_equals" translatable="false">F =</string>
    <string name="Fn_equals" translatable="false">Fₙ =</string>
    <string name="M_equals" translatable="false">M =</string>
    <string name="m_equals" translatable="false">m =</string>
    <string name="N_equals" translatable="false">N =</string>
    <string name="n_equals" translatable="false">n =</string>
    <string name="ni_equals" translatable="false">ni =</string>
    <string name="n1_equals" translatable="false">n₁ =</string>
    <string name="n2_equals" translatable="false">n₂ =</string>
    <string name="Nn_equals" translatable="false">Nₙ =</string>
    <string name="P_equals" translatable="false">P =</string>
    <string name="p_equals" translatable="false">p =</string>
    <string name="pc_equals" translatable="false">pc =</string>
    <string name="P1_equals" translatable="false">P₁ =</string>
    <string name="P2_equals" translatable="false">P₂ =</string>
    <string name="p1_equals" translatable="false">p₁ =</string>
    <string name="p2_equals" translatable="false">p₂ =</string>
    <string name="R_equals" translatable="false">R =</string>
    <string name="r_equals" translatable="false">r =</string>
    <string name="S_equals" translatable="false">S =</string>
    <string name="s_equals" translatable="false">s =</string>
    <string name="S1_equals" translatable="false">S₁ =</string>
    <string name="S2_equals" translatable="false">S₂ =</string>
    <string name="s1_equals" translatable="false">s₁ =</string>
    <string name="s2_equals" translatable="false">s₂ =</string>
    <string name="u_equals" translatable="false">u =</string>
    <string name="u1_equals" translatable="false">u₁ =</string>
    <string name="u2_equals" translatable="false">u₂ = </string>
    <string name="v_equals" translatable="false">v =</string>
    <string name="x_equals" translatable="false">x =</string>
    <string name="xbar_equals" translatable="false">x̄ =</string>
    <string name="xbar1_equals" translatable="false">x̄₁ =</string>
    <string name="xbar2_equals" translatable="false">x̄₂ =</string>
    <string name="y_aps_equals" translatable="false">y\' =</string>
    <string name="Z_equals" translatable="false">Z =</string>
    <string name="Zalpha_equals" translatable="false">Zα =</string>
    <string name="Zbeta_equals" translatable="false">Zβ =</string>
    <string name="IC_equals" translatable="false">IC =</string>
    <string name="mean_equals">Mean =</string>
    <string name="delta_equals" translatable="false">Δ =</string>
    <string name="pi0_equals" translatable="false">π₀ =</string>
    <string name="pi1_equals" translatable="false">π₁ =</string>
    <string name="pi2_equals" translatable="false">π₂ =</string>
    <string name="mu0_equals" translatable="false">ϻ₀ =</string>
    <string name="C_times_F_equals" translatable="false">C * F =</string>
    <string name="add_data_2x2">Add data</string>
    <string name="A1" translatable="false">A₁</string>
    <string name="A2" translatable="false">A₂</string>
    <string name="B1" translatable="false">B₁</string>
    <string name="B2" translatable="false">B₂</string>
    <string name="row_total">Row\ntotal</string>
    <string name="column_total">Column\ntotal</string>
    <string name="table_values_empty">Please, fill out all inputs</string>
    <string name="p_a1" translatable="false">P(A₁) = </string>
    <string name="p_a2" translatable="false">P(A₂) = </string>
    <string name="p_b1" translatable="false">P(B₁) = </string>
    <string name="p_b2" translatable="false">P(B₂) = </string>
    <string name="p_a1_and_b1" translatable="false">P(A₁ ∩ B₁) = </string>
    <string name="p_a1_and_b2" translatable="false">P(A₁ ∩ B₂) = </string>
    <string name="p_a2_and_b1" translatable="false">P(A₂ ∩ B₁) = </string>
    <string name="p_a2_and_b2" translatable="false">P(A₂ ∩ B₂) = </string>
    <string name="p_a1_bar_b1" translatable="false">P(A₁ | B₁) = </string>
    <string name="p_a1_bar_b2" translatable="false">P(A₁ | B₂) = </string>
    <string name="P_A_equals" translatable="false">P(A) =</string>
    <string name="P_B_equals" translatable="false">P(B) =</string>
    <string name="P_A_over_B_equals" translatable="false">P(A / B) =</string>
    <string name="P_B_over_A_equals" translatable="false">P(B / A) =</string>
</resources>