<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".CalcDistBinomial">

    <Spinner
        android:id="@+id/probSpinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#000000"
        android:entries="@array/probs_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/probTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zLbl" />

    <EditText
        android:id="@+id/probTxt"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/round_edit_text"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/P"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/probSpinner"
        app:layout_constraintTop_toBottomOf="@+id/ZTxt" />

    <TextView
        android:id="@+id/n1Lbl"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/n1_equals"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/n2Lbl"
        app:layout_constraintEnd_toStartOf="@+id/n1Txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/n1_equals" />

    <TextView
        android:id="@+id/n2Lbl"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/n2_equals"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/x1Lbl"
        app:layout_constraintEnd_toStartOf="@+id/n2Txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n1Lbl"
        tools:text="@string/n2_equals" />

    <TextView
        android:id="@+id/x1Lbl"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/xbar1_equals"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/x2Lbl"
        app:layout_constraintEnd_toStartOf="@+id/x1Txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n2Lbl"
        tools:text="@string/xbar1_equals" />

    <TextView
        android:id="@+id/x2Lbl"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/xbar2_equals"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/s1Lbl"
        app:layout_constraintEnd_toStartOf="@+id/x2Txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/x1Lbl"
        tools:text="@string/xbar2_equals" />

    <TextView
        android:id="@+id/s1Lbl"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/s1_equals"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/s2Lbl"
        app:layout_constraintEnd_toStartOf="@+id/s1Txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/x2Lbl"
        tools:text="@string/s1_equals" />

    <TextView
        android:id="@+id/s2Lbl"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/s2_equals"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/zLbl"
        app:layout_constraintEnd_toStartOf="@+id/s2Txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s1Lbl"
        tools:text="@string/s2_equals" />

    <TextView
        android:id="@+id/zLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Z_equals"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/probSpinner"
        app:layout_constraintEnd_toStartOf="@+id/ZTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s2Lbl"
        tools:text="@string/Z_equals" />

    <EditText
        android:id="@+id/n1Txt"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/n1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:singleLine="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/n2Txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/n1Lbl"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/n2Txt"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/n2"
        android:importantForAutofill="no"
        android:inputType="number"
        android:singleLine="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/x1Txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/n2Lbl"
        app:layout_constraintTop_toBottomOf="@+id/n1Txt" />

    <EditText
        android:id="@+id/x1Txt"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/xbar1"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/x2Txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/x1Lbl"
        app:layout_constraintTop_toBottomOf="@+id/n2Txt" />

    <EditText
        android:id="@+id/x2Txt"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/xbar2"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/s1Txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/x2Lbl"
        app:layout_constraintTop_toBottomOf="@+id/x1Txt" />

    <EditText
        android:id="@+id/s1Txt"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/s1"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/s2Txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/s1Lbl"
        app:layout_constraintTop_toBottomOf="@+id/x2Txt" />

    <EditText
        android:id="@+id/s2Txt"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/s2"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/ZTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/s2Lbl"
        app:layout_constraintTop_toBottomOf="@+id/s1Txt" />

    <EditText
        android:id="@+id/ZTxt"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_edit_text"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/Z"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/probTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zLbl"
        app:layout_constraintTop_toBottomOf="@+id/s2Txt" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/limpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/limpiar" />
</androidx.constraintlayout.widget.ConstraintLayout>