<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".CalcTeoremaBayesSimple">

    <TextView
        android:id="@+id/activity_calc_teorema_bayes_simple_tv_p_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/P_A_equals"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/activity_calc_teorema_bayes_simple_tv_p_b"
        app:layout_constraintEnd_toStartOf="@+id/activity_calc_teorema_bayes_simple_et_p_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_calc_teorema_bayes_simple_tv_p_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/P_B_equals"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/activity_calc_teorema_bayes_simple_tv_p_b_over_a"
        app:layout_constraintEnd_toStartOf="@+id/activity_calc_teorema_bayes_simple_et_p_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_calc_teorema_bayes_simple_tv_p_a" />

    <TextView
        android:id="@+id/activity_calc_teorema_bayes_simple_tv_p_b_over_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/P_B_over_A_equals"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/activity_calc_teorema_bayes_simple_tv_p_a_over_b"
        app:layout_constraintEnd_toStartOf="@+id/activity_calc_teorema_bayes_simple_et_p_b_over_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_calc_teorema_bayes_simple_tv_p_b" />

    <TextView
        android:id="@+id/activity_calc_teorema_bayes_simple_tv_p_a_over_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="108dp"
        android:text="@string/P_A_over_B_equals"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_calc_teorema_bayes_simple_et_p_a_over_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_calc_teorema_bayes_simple_tv_p_b_over_a" />

    <EditText
        android:id="@+id/activity_calc_teorema_bayes_simple_et_p_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/P_A"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/activity_calc_teorema_bayes_simple_et_p_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_calc_teorema_bayes_simple_tv_p_a"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_calc_teorema_bayes_simple_et_p_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/P_B"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/activity_calc_teorema_bayes_simple_et_p_b_over_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_calc_teorema_bayes_simple_tv_p_b"
        app:layout_constraintTop_toBottomOf="@+id/activity_calc_teorema_bayes_simple_et_p_a" />

    <EditText
        android:id="@+id/activity_calc_teorema_bayes_simple_et_p_b_over_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/P_B_over_A"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/activity_calc_teorema_bayes_simple_et_p_a_over_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_calc_teorema_bayes_simple_tv_p_b_over_a"
        app:layout_constraintTop_toBottomOf="@+id/activity_calc_teorema_bayes_simple_et_p_b" />

    <EditText
        android:id="@+id/activity_calc_teorema_bayes_simple_et_p_a_over_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/round_edit_text"
        android:cursorVisible="false"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/P_A_over_B"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_calc_teorema_bayes_simple_tv_p_a_over_b"
        app:layout_constraintTop_toBottomOf="@+id/activity_calc_teorema_bayes_simple_et_p_b_over_a" />

    <Button
        android:id="@+id/activity_calc_teorema_bayes_simple_btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>